--- a/preprocessing_fungi.ipynb
+++ b/preprocessing_fungi.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/sowmyarshetty/NNClass/blob/main/preprocessing_fungi.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -145,15 +155,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 18,
       "metadata": {
         "id": "ouwjLZRpYNZH"
       },
       "outputs": [],
       "source": [
         "# Using the same syntax, use a for loop to apply resizing to all images\n",
-        "for i in range(len(imgs)):\n",
-        "  imgs[i] = imgs[i].resize((250,250))\n"
+        "# for i in range(len(imgs)):\n",
+        "#   imgs[i] = imgs[i].resize((250,250))\n",
+        "imgs = [ img.resize((250,250)) for img in imgs] #--- list comprehension\n"
       ]
     },
     {
@@ -166,9 +177,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bh8OkiTM2lIc",
-        "outputId": "5a154499-1371-45f4-f079-ac331c184ea9"
+        "outputId": "530e6148-9b31-4e92-95ba-4d181182de0b"
       },
-      "execution_count": 11,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -178,19 +189,19 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 19
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JoA74zHcZQ4n",
-        "outputId": "a19b97ad-8ef9-42da-f43b-2edf1d589d22"
+        "outputId": "b43aabc2-9364-4128-cb78-a6fd8ad40d96"
       },
       "outputs": [
         {
@@ -249,7 +260,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 20
         }
       ],
       "source": [
@@ -455,7 +466,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
