--- a/AmazonHomeKitchenReviews.ipynb
+++ b/AmazonHomeKitchenReviews.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNujIkL4SI7F6k4EiqG3+bl",
+      "authorship_tag": "ABX9TyNRrS1BCw4MbvYIrykfno5l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "id": "PclZc23p7xUe",
         "outputId": "b45fa369-ce2a-4aa2-ee36-1c00fadd9b25"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "7OKv7TlaVDuY"
       },
@@ -212,7 +212,7 @@
         "id": "lm35v8Xx-3Jn",
         "outputId": "08216e83-e000-4a9a-f3b1-41f1ee8de878"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -235,20 +235,306 @@
       "source": [
         "metadatafileid = '1eo8HyJeC5_G9KCHItFsLdJWLcCPTsrS0'\n",
         "reviewsfileid = '1LW2ZkOjZ_Bj4JEffULu_oVuXeD-2SGwa'\n",
-        "meetafilename = 'meta_Home_and_Kitchen_50k.jsonl'\n",
+        "metafilename = 'meta_Home_and_Kitchen_50k.jsonl'\n",
         "reviewsfilename = 'Home_and_Kitchen_100k.jsonl'\n",
         "\n",
         "metadataurl = f\"https://drive.google.com/uc?export=download&id={metadatafileid}\"\n",
         "reviewsurl = f\"https://drive.google.com/uc?export=download&id={reviewsfileid}\"\n",
         "\n",
-        "gdown.download(metadataurl, 'metadata.csv', quiet=False)\n",
-        "gdown.download(reviewsurl, 'reviews.csv', quiet=False)"
+        "gdown.download(metadataurl,metafilename, quiet=False)\n",
+        "gdown.download(reviewsurl, reviewsfilename, quiet=False)\n",
+        "\n"
       ],
       "metadata": {
-        "id": "N2u7Btv9_JZC"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N2u7Btv9_JZC",
+        "outputId": "eccc2efb-4ab1-436b-e12b-e2eba2577b2b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Downloading...\n",
+            "From (original): https://drive.google.com/uc?export=download&id=1eo8HyJeC5_G9KCHItFsLdJWLcCPTsrS0\n",
+            "From (redirected): https://drive.google.com/uc?export=download&id=1eo8HyJeC5_G9KCHItFsLdJWLcCPTsrS0&confirm=t&uuid=d70d1cc8-62c5-4993-adef-2e9c515027d1\n",
+            "To: /content/meta_Home_and_Kitchen_50k.jsonl\n",
+            "100%|██████████| 185M/185M [00:02<00:00, 89.4MB/s]\n",
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?export=download&id=1LW2ZkOjZ_Bj4JEffULu_oVuXeD-2SGwa\n",
+            "To: /content/Home_and_Kitchen_100k.jsonl\n",
+            "100%|██████████| 66.7M/66.7M [00:00<00:00, 75.0MB/s]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* Read the json files into dataframes"
+      ],
+      "metadata": {
+        "id": "pwdcecevIGaQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_meta = pd.read_json(metafilename,lines=True)\n",
+        "df_reviews = pd.read_json(reviewsfilename,lines=True)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uPRFjrqLAbfP",
+        "outputId": "57e8714f-0572-4a17-8103-ddf7458b9362"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Index(['main_category', 'title', 'average_rating', 'rating_number', 'features',\n",
+            "       'description', 'price', 'images', 'videos', 'store', 'categories',\n",
+            "       'details', 'parent_asin', 'bought_together'],\n",
+            "      dtype='object')\n",
+            "Index(['rating', 'title', 'text', 'images', 'asin', 'parent_asin', 'user_id',\n",
+            "       'timestamp', 'helpful_vote', 'verified_purchase'],\n",
+            "      dtype='object')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "*   Analyse the datasets\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "pPBfEocwH45Y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df_meta.columns)\n",
+        "print(df_reviews.columns)\n",
+        "pd.set_option(\"display.max_colwidth\", None)\n",
+        "print(df_meta.head(1))"
+      ],
+      "metadata": {
+        "id": "o64ec0-EH4MN"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* Extract the brand, color and price data from the details column of the metadata"
+      ],
+      "metadata": {
+        "id": "qeSjr7W9J--3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_meta_normalized = df_meta\n",
+        "df_metadetails = pd.json_normalize(df_meta_normalized[\"details\"])\n",
+        "# df_meta_normalized = df_meta_normalized.drop(columns=[\"details\"]).join(df_metadetails)  # Merge with main DataFrame\n",
+        "print(df_metadetails.columns)\n",
+        "df_meta_normalized = df_meta_normalized.drop(columns=[\"details\",\"images\",\"videos\"]).join(df_metadetails[[\"Brand\",\"Material\",\"Color\",\"Style\",\"Pattern\"]])\n",
+        "print(df_meta_normalized.columns)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e2EIfTT3J-Gg",
+        "outputId": "c5bc4294-3bfd-47f1-d438-2ef99e222c00"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Index(['Brand', 'Material', 'Color', 'Capacity', 'Style', 'Pattern',\n",
+            "       'Product Care Instructions', 'Unit Count', 'Product Dimensions',\n",
+            "       'Number of Items',\n",
+            "       ...\n",
+            "       'Best Sellers Rank.Carpet & Upholstery Cleaning Machines Accessories',\n",
+            "       'Best Sellers Rank.Sausage Stuffers',\n",
+            "       'Best Sellers Rank.Tiered Serving Trays & Platters',\n",
+            "       'Best Sellers Rank.Panel Track Blinds',\n",
+            "       'Best Sellers Rank.Kitchen Drains & Strainers',\n",
+            "       'Best Sellers Rank.Heating, Cooling & Air Quality',\n",
+            "       'Best Sellers Rank.Novelty Toys & Amusements',\n",
+            "       'Best Sellers Rank.Bottled Iced Tea',\n",
+            "       'Best Sellers Rank.Students Round Edge Scissors',\n",
+            "       'Best Sellers Rank.Honey Jars'],\n",
+            "      dtype='object', length=2224)\n",
+            "Index(['main_category', 'title', 'average_rating', 'rating_number', 'features',\n",
+            "       'description', 'price', 'store', 'categories', 'parent_asin',\n",
+            "       'bought_together', 'Brand', 'Material', 'Color', 'Style', 'Pattern'],\n",
+            "      dtype='object')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df_meta_normalized.head(1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wowD2VXsK531",
+        "outputId": "a560c315-0ed4-4d13-c096-f591cf79d748"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  main_category  \\\n",
+            "0   Amazon Home   \n",
+            "\n",
+            "                                                                                                                                             title  \\\n",
+            "0  Set of 4 Irish Coffee Glass Mugs Footed 10.5 oz.Thick Wall Glass For Coffee, tea, Cappuccinos, Mulled Ciders,Hot Chocolates, Ice cream and More   \n",
+            "\n",
+            "   average_rating  rating_number  \\\n",
+            "0             4.6             18   \n",
+            "\n",
+            "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         features  \\\n",
+            "0  [☕PERFECT IRISH COFFEE MUG: With our clear glass 10.5 ounce makes it a perfect mug for offering up your signature Coffee Drinks, Cappuccinos, Milk shakes, Dessert, Sundae and much more!, ☕FOOTED BOTTOM - Footed Bottom for an elegant look and easy sipping, ☕COFFEE & MORE-You can serve your favorite cappuccino, tea, coffee, ice cream,milk shakes,desserts and more!, ☕HIGHLY DURABLE GLASS - Our Irish Coffee Mugs are extremely durable with thick glass to ensure optimal durability for excellent service!, ☕DIMENSIONS: 12.8 x 11.8 x 5.3 inches]   \n",
+            "\n",
+            "                                                                                                                                                                                                                                                                                                                                                                        description  \\\n",
+            "0  [Set of 12 Footed 10.5 oz. Irish coffee mug the perfect vessel for offering up your signature cappuccinos, mulled ciders, hot chocolates, and more! With its ornate stem and petite handle, this glass mug is certain to please. Plus, an elegant look and easy sipping, and its thick glass walls ensure optimal durability for excellent service life and fewer replacements.]   \n",
+            "\n",
+            "   price     store  \\\n",
+            "0  24.95  LavoHome   \n",
+            "\n",
+            "                                                                                                          categories  \\\n",
+            "0  [Home & Kitchen, Kitchen & Dining, Dining & Entertaining, Glassware & Drinkware, Cups, Mugs, & Saucers, Mug Sets]   \n",
+            "\n",
+            "  parent_asin  bought_together     Brand Material  Color   Style Pattern  \n",
+            "0  B07R3DYMH6              NaN  LavoHome    Glass  Clear  Modern   Solid  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* Merge the data sets from the meta and reviews with the relevant columns with parent_asin as the join key and index"
+      ],
+      "metadata": {
+        "id": "HkfthO5LIJgD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_merged = df_reviews.merge(df_meta_normalized[['title','description','price','Brand','Material','Color','categories',\"parent_asin\"]],on='parent_asin',how='left')"
+      ],
+      "metadata": {
+        "id": "iehbxUhCEeSE"
+      },
+      "execution_count": 56,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* Look for reviews with missing product metadata"
+      ],
+      "metadata": {
+        "id": "EKQYVk4jTw5k"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "missing_asins_df = df_reviews[~df_reviews['parent_asin'].isin(df_meta_normalized['parent_asin'])]\n",
+        "print(missing_asins_df[['parent_asin']].drop_duplicates().count())\n",
+        "print(missing_asins_df[['parent_asin']].count())\n",
+        "print(len(df_reviews))\n",
+        "print(len(df_merged))\n",
+        "print(df_merged.columns)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OLpniptgRopW",
+        "outputId": "27a7e062-c684-4830-8d77-df2aeba5b12c"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "parent_asin    70292\n",
+            "dtype: int64\n",
+            "parent_asin    93495\n",
+            "dtype: int64\n",
+            "100000\n",
+            "100000\n",
+            "Index(['rating', 'title_x', 'text', 'images', 'asin', 'parent_asin', 'user_id',\n",
+            "       'timestamp', 'helpful_vote', 'verified_purchase', 'title_y',\n",
+            "       'description', 'price', 'Brand', 'Material', 'Color', 'categories'],\n",
+            "      dtype='object')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* Remove the reviews which do not have product metadata"
+      ],
+      "metadata": {
+        "id": "VIOBO29fT1xx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_new = df_merged.dropna(subset = ['title_y','description','price','Brand','Material','Color','categories','parent_asin'])\n",
+        "print(len(df_new))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Unw18UAVT9Ax",
+        "outputId": "99065d9d-6e25-40c7-edeb-f76de31dcdd9"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4676\n"
+          ]
+        }
+      ]
     }
   ]
 }
